fixed name sizing on mobile on front page

--- a/src/components/CoverPage/coverPage.css
+++ b/src/components/CoverPage/coverPage.css
@@ -34,7 +34,7 @@
 
 .home .home-name h1 {
   color: #000;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 450;
   -webkit-animation: reveal 1s cubic-bezier(0, 0, 0, 1) 1 normal forwards;
   animation: reveal 1s cubic-bezier(0, 0, 0, 1) 1 normal forwards;
